fixed the spacing

--- a/src/src/styles.css
+++ b/src/src/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .box {
-    padding-left: 1.5rem;
+    padding: 0rem 1.5rem 1.5rem 1.5rem;
     border: 1px solid #333;
     background-color: #333;
     border-radius: 3px;
